--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Simon Game</title>
+  <title>Brain Train</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Original+Surfer&effect=emboss' rel='stylesheet' type='text/css'>
@@ -31,7 +31,7 @@
     <div id="bottomleft"></div>
     <div id="bottomright"></div>
     <div id="inner-circle">
-      <div id="title" class="font-effect-emboss">SIMON!</div>
+      <div id="title" class="font-effect-emboss">Brain Train</div>
       <div id="switches">
         <input type="checkbox" class="toggle" id="on">
         <button class="button" id="start">Start</button>
