--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="text1">
         <span>POWER</span><span>STRICT</span>
       </div>
-      <div id="turn"></div>
+      <div id="turn">-</div>
       <div class="text2">
         COUNT
       </div>
