--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="button" id="start">Start</button>
       </div>
       <div id="turn">-</div>
-      <div class="text2">
+      <div class="display">
         COUNT
       </div>
     </div>
