--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="bottomleft"></div>
     <div id="bottomright"></div>
     <div id="inner-circle">
-      <div id="title" class="font-effect-emboss">Brain Train</div>
+      <div id="title">Brain Train</div>
       <div id="switches">
         <button class="button" id="start">Start</button>
       </div>
