--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
 <body>
 
-  <div id="outer-circle">
+  <div id="outer-circle" class="d-flex justify-content-center">
     <div id="topleft"></div>
     <div id="topright"></div>
     <div id="bottomleft"></div>
     <div id="bottomright"></div>
-    <div id="inner-circle">
+    <div id="inner-circle" class="d-flex justify-content-center">
       <div id="title">Brain Train</div>
       <div id="switches">
         <button class="button" id="start">Start</button>
       </div>
       <div id="turn">-</div>
       <div class="display">
-        COUNT
+        TURN
       </div>
     </div>
   </div>
