--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 <body>
 
-  <div id="outer-circle" class="d-flex justify-content-center">
+  <div id="outer-circle">
     <div id="topleft"></div>
     <div id="topright"></div>
     <div id="bottomleft"></div>
     <div id="bottomright"></div>
-    <div id="inner-circle" class="d-flex justify-content-center">
+    <div id="inner-circle">
       <div id="title">Brain Train</div>
-      <div id="switches">
+      <div id="switch">
         <button class="button" id="start">Start</button>
       </div>
       <div id="turn">-</div>
