Add sound files

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <link rel="stylesheet" href="css/style.css">
 
   <audio id="clip1">
-  	<source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></source>
+  	<source src="sounds/Sound1.mp3"></source>
   </audio>
   <audio id="clip2">
-  	<source src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></source>
+  	<source src="sounds/Sound2.mp3"></source>
   </audio>
   <audio id="clip3">
-  	<source src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></source>
+  	<source src="sounds/Sound3.mp3"></source>
   </audio>
   <audio id="clip4">
-  	<source src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></source>
+  	<source src="sounds/Sound4.mp3"></source>
   </audio>
 </head>
 
