--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <link href='https://fonts.googleapis.com/css?family=Original+Surfer&effect=emboss' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
 
-  <audio id="clip1">
+  <audio id="sound1">
   	<source src="sounds/Sound1.mp3"></source>
   </audio>
-  <audio id="clip2">
+  <audio id="sound2">
   	<source src="sounds/Sound2.mp3"></source>
   </audio>
-  <audio id="clip3">
+  <audio id="sound3">
   	<source src="sounds/Sound3.mp3"></source>
   </audio>
-  <audio id="clip4">
+  <audio id="sound4">
   	<source src="sounds/Sound4.mp3"></source>
   </audio>
 </head>
