--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="bottomright"></div>
     <div id="inner-circle">
       <div id="title">Brain Train</div>
-      <div id="switch">
+      <div>
         <button class="button" id="start">Start</button>
       </div>
       <div id="turn">-</div>
