--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
 </head>
 
 <body>
-
-  <div id="outer-circle">
-    <div id="topleft"></div>
-    <div id="topright"></div>
-    <div id="bottomleft"></div>
-    <div id="bottomright"></div>
-    <div id="inner-circle">
-      <div id="title">Brain Train</div>
-      <div>
-        <button class="button" id="start">Start</button>
-      </div>
-      <div id="turn">-</div>
-      <div id="display">
-        TURN
-      </div>
+    <div class="container">
+        <div id="outer-circle">
+            <div id="topleft"></div>
+            <div id="topright"></div>
+            <div id="bottomleft"></div>
+            <div id="bottomright"></div>
+            <div id="inner-circle">
+            <div id="title">Brain Train</div>
+            <div>
+                <button class="button" id="start">Start</button>
+            </div>
+            <div id="turn">-</div>
+            <div id="display">
+                TURN
+            </div>
+            </div>
+        </div>
     </div>
-  </div>
-
   <script  src="js/index.js"></script>
 
 </body>
