--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <body>
     <div class="container">
         <div id="outer-circle">
-            <div id="topleft"></div>
-            <div id="topright"></div>
-            <div id="bottomleft"></div>
-            <div id="bottomright"></div>
+            <div id="green"></div>
+            <div id="red"></div>
+            <div id="yellow"></div>
+            <div id="blue"></div>
             <div id="inner-circle">
             <div id="title">Brain Train</div>
             <div>
