--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
   <link rel="stylesheet" href="css/style.css">
 
   <audio id="sound1">
-  	<source src="sounds/Sound1.mp3"></source>
+  	<source src="sounds/Sound1.mp3">
   </audio>
   <audio id="sound2">
-  	<source src="sounds/Sound2.mp3"></source>
+  	<source src="sounds/Sound2.mp3">
   </audio>
   <audio id="sound3">
-  	<source src="sounds/Sound3.mp3"></source>
+  	<source src="sounds/Sound3.mp3">
   </audio>
   <audio id="sound4">
-  	<source src="sounds/Sound4.mp3"></source>
+  	<source src="sounds/Sound4.mp3">
   </audio>
 </head>
 
 <body>
     <div class="container">
+        <h5 id="level-number">Level 1</h5>
         <div id="outer-circle">
             <div id="green"></div>
             <div id="red"></div>
@@ -42,7 +43,8 @@
             </div>
         </div>
     </div>
+  <script  src="js/constants.js"></script>
+  <script  src="js/helper.js"></script>
   <script  src="js/index.js"></script>
-
 </body>
 </html>
